# Course_barnovskiy

./: .env  README.md  pyproject.toml  user_settings.json.py
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
