[tool.poetry]
name = "course-1-barnovskiy"
version = "0.1.0"
description = "Разработка приложения для анализа транзакций, которые находятся в Excel-файле. Генерирация JSON-данных для веб-страниц, формировать Excel-отчеты,предоставлять другие сервисы."

authors = ["Eduard <barned85@gmail.com>"]
readme = "README.md"
packages = [{include = "course_1_barnovskiy"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''
